--- a/message.html
+++ b/message.html
@@ -184,7 +184,7 @@
   <div id="final" class="hidden">
     <h1>💀 bro.</h1>
     
-    <p>this was obviously a prank.</p>
+    <p>this was obviously a prank, Chashmish.</p>
     <p>you just wasted your time. Haha</p>
   </div>
 
@@ -296,3 +296,4 @@
 
 </body>
 </html>
+
